# pybaibao

./: README.md  pyproject.toml
docs/: ai.md  base.md  data.md  db.md  db_sql.md  message.md  usage.md  util.md
src/baibao/: __init__.py  __main__.py
src/baibao/ai/llm/: __init__.py  _llm.py  openai_llm.py
src/baibao/ai/ocr/: __init__.py  _ocr.py  easy_ocr.py  paddle_ocr.py
src/baibao/base/: __init__.py  action.py  attr.py  cli.py  ctxt.py  env.py  file.py  hook.py  log.py  mod.py  pip.py  pip_util.py  time.py  util.py  validate.py
src/baibao/data/: __init__.py  currency.py  meta.py
src/baibao/data/template/: __init__.py  _template.py  jinja2_engine.py
src/baibao/data/util/: html_gen.py
src/baibao/db/: __init__.py  base_db.py  db.py  db_cfg.py  db_pool.py  db_util.py
src/baibao/db/sql/: __init__.py  _sql.py  base_sql.py  db_client.py
src/baibao/message/: __init__.py
src/baibao/message/email/: __init__.py  _email.py  email_client.py
src/baibao/util/: __init__.py
src/baibao/util/commands/: __init__.py  pip_command.py  pypr_command.py
tests/base/: test_pip.py  test_pip_util.py
tests/db/: test_db.py  test_db_cfg.py  test_db_util.py  test_sql.py
