[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baibao"
version = "0.0.1"
description = "百宝，方便好用的Python常用功能库。"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    {name = "Kahle"}
]
dependencies = [
]

[project.optional-dependencies]
all = []
dev = ["pytest", "black", "ruff"]


