[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baibao"
version = "0.0.3"
description = "百宝，方便好用的 Python 常用功能库。把日常开发中反复用到的能力封装成简洁的 API，开箱即用。"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
authors = [
    {name = "Kahle"}
]
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
all = []
dev = ["pytest", "ruff", "mypy"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true


